--- a/education_kit/website/templates/index.html
+++ b/education_kit/website/templates/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <div class="title">EDUCATION KIT</div>
+    <div class="title-main">EDUCATION KIT</div>
     <div class="buttons">
-        <a href="login.html" class="btn">Log In</a>
-        <a href="signup.html" class="btn">Sign Up</a>
+        <a href="login.html" class="btn">Вхід</a>
+        <a href="register.html" class="btn">Реєстрація</a>
     </div>
     <script src="script.js"></script>
 </body>
