--- a/education_kit/website/templates/login.html
+++ b/education_kit/website/templates/login.html
@@ -5,19 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education Kit</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Підключення FontAwesome для іконок -->
 </head>
 <body>
     <canvas id="canvas"></canvas>
+
+    <!-- Кнопка-іконка для повернення на головну сторінку -->
+    <a href="index.html" class="home-icon">
+        <i class="fas fa-home"></i>
+    </a>
     
-    <div class="container">
-        <h1 class="titlev2">Education Kit</h1>
-        <form class="login-form">
-            <input type="text" id="login" placeholder="Логін" required>
-            <div class="password-wrapper">
-                <input type="password" id="password" placeholder="Пароль" required>
-            </div>
-            <button type="submit" class="btn">Увійти</button>
-        </form>
+    <div class="content">
+        <h1 class="title">EDUCATION KIT</h1>
+        
+        <!-- Поля для вводу та кнопка -->
+        <div class="form-container">
+            <input type="text" id="login" placeholder="Логін" class="input-field">
+            <input type="password" id="password" placeholder="Пароль" class="input-field">
+            <a href="index.html" class="btn-submit">Увійти</a>
+        </div>
     </div>
 
     <script src="script.js"></script>
