--- a/education_kit/website/templates/login.html
+++ b/education_kit/website/templates/login.html
@@ -6,25 +6,48 @@
     <title>Education Kit</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Підключення FontAwesome для іконок -->
+    <link rel="stylesheet" href="{% static 'styles_for_alerts.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        #messages {
+            position: fixed;
+            top: 10px;
+            z-index: 1000;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
 
+    <!-- Відображення повідомлення -->
+    {% if messages %}
+    <div id="messages">
+        {% for message in messages %}
+        <div class="alert error" >
+            {{ message }}
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
     <!-- Кнопка-іконка для повернення на головну сторінку -->
-    <a href="index.html" class="home-icon">
+    <a href="{% url 'home' %}" class="home-icon">
         <i class="fas fa-home"></i>
     </a>
-    
+
     <div class="content">
         <h1 class="title">EDUCATION KIT</h1>
-        
-        <!-- Поля для вводу та кнопка -->
-        <div class="form-container">
-            <input type="text" id="login" placeholder="Логін" class="input-field">
-            <input type="password" id="password" placeholder="Пароль" class="input-field">
-            <a href="index.html" class="btn-submit">Увійти</a>
-        </div>
+
+        <!-- Форма для вводу логіну та пароля -->
+        <form method="POST" action="{% url 'login' %}">
+            {% csrf_token %}
+            <div class="form-container">
+                <input type="text" name="login" id="login" placeholder="Логін" class="input-field" required>
+                <input type="password" name="password" id="password" placeholder="Пароль" class="input-field" required>
+                <button type="submit" class="btn-submit">Увійти</button>
+            </div>
+        </form>
     </div>
 
     <script src="{% static 'script.js' %}"></script>
