--- a/education_kit/website/templates/register.html
+++ b/education_kit/website/templates/register.html
@@ -146,7 +146,7 @@
 
                 // Перенаправлення після 3 секунд
                 setTimeout(() => {
-                    window.location.href = 'index.html';
+                    window.location.href = "{% url 'home' %}";
                 }, 3000);
                 }
         });
